--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,7 @@ stages:
 
 build:
 stage: build
-script: |-
-  docker rm -f ${DOCKER_IMAGE}:latest 2>/dev/null || true
-  docker build -t ${DOCKER_IMAGE}:latest . 
+script:
+  - docker build -t ${DOCKER_IMAGE}:latest . 
 tags:
   - devops-runner-prod
