--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,13 @@ stages:
   - build_image
   - scan_image
 
+before_script:
+  - |
+    apk add --update curl
+    curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s -- 
+    apk del curl 
+    rm -rf /var/cache/apk/*
+
 build:
   stage: build_image
   script:
