--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ before_script:
     curl -sSfL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh | sh -s -- 
     apk del curl 
     rm -rf /var/cache/apk/*
+  - echo "$DCOKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
 
 build:
   stage: build_image
